--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^7.1.17",
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.541.0",
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-safe-area-context": "^5.6.1",
