feat: enhance UI with gradients, consistent icons and improved layout
- Added LinearGradient to avatar card with elegant green gradient
- Changed all Clinical History icons to white with green circles
- Enhanced Daily Tips section with gradient background and expanded content
- Added 3 practical tips and 'Ask for more tips' button
- Moved Daily Tips and Pet Photos to end of app for better flow
- Improved text colors for better contrast on gradients
- Added expo-linear-gradient dependency
- Better visual hierarchy and user experience

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "expo": "~53.0.22",
+    "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.541.0",
     "react": "19.0.0",
