--- a/app.json
+++ b/app.json
@@ -24,6 +24,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "scheme": "peluditos",
+    "plugins": [
+      "expo-web-browser"
+    ]
   }
 }
