--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.7",
+    "@supabase/supabase-js": "^2.56.0",
     "expo": "~53.0.22",
+    "expo-auth-session": "~6.2.1",
+    "expo-crypto": "~14.1.5",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.541.0",
     "react": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.15.2"
   },
