--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2"
   },
   "devDependencies": {
