--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^1.7.17",
     "@peluditos/shared": "*",
     "@peluditos/supabase": "*",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.38.4",
     "@tailwindcss/forms": "^0.5.7",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
