--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,10 +16,12 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.38.4",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/react-datepicker": "^6.2.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.0.0",
     "recharts": "^3.1.2",
     "tailwind-merge": "^2.0.0"
