add clients section
add clients section

--- a/env.example
+++ b/env.example
@@ -4,9 +4,11 @@
 # For Admin PWA (apps/admin/.env.local)
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # For Mobile App (apps/mobile/.env)
 EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # Copy these values to the respective .env files in each app
+# IMPORTANT: Never commit .env files to version control
